Regression(r253277) ASSERTION FAILED: !parameters.request.httpBody() in NetworkConnectionToWebProcess::preconnectTo() https://bugs.webkit.org/show_bug.cgi?id=205030

Reviewed by Antti Koivisto.

Instead of using the full request as preconnect request, create a simple one that contains only the destination URL.
This avoids sending a request body unnecessarily over IPC, which was the cause of the assertion.

* WebProcess/WebPage/WebPage.cpp:
(WebKit::WebPage::loadRequest):


Canonical link: https://commits.webkit.org/218271@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@253327 268f45cc-cd09-0410-ab3c-d52691b4dbfc